--- a/pm2.config.json
+++ b/pm2.config.json
@@ -2,21 +2,16 @@
   "apps": [
     {
       "name": "lms-front",
-      "script": "bun run start",
-      "instances": "max",
-      "exec_mode": "cluster",
-      "watch": false,
-      "max_memory_restart": "1G",
+      "script": "serve",
+      "args": ["-s", "build", "-l", "3000"],
+      "instances": 1,
+      "exec_mode": "fork",
       "env": {
-        "NODE_ENV": "development"
-      },
-      "env_production": {
+        "PM2_SERVE_PATH": "./build",
+        "PM2_SERVE_PORT": 3000,
+        "PM2_SERVE_SPA": "true",
         "NODE_ENV": "production"
-      },
-      "error_file": "./logs/error.log",
-      "out_file": "./logs/out.log",
-      "merge_logs": true,
-      "log_date_format": "YYYY-MM-DD HH:mm:ss"
+      }
     }
   ]
 }
