--- a/pm2.config.json
+++ b/pm2.config.json
@@ -2,19 +2,15 @@
   "apps": [
     {
       "name": "lms-front",
-      "script": "node_modules/next/dist/bin/next",
+      "script": "npm",
       "args": "start",
       "cwd": "/var/www/CO2eportal-lms-frontend",
       "instances": 2,
       "exec_mode": "cluster",
       "env": {
-        "NODE_ENV": "development",
+        "NODE_ENV": "production",
         "PORT": 3000
-      },
-      "error_file": "/var/log/pm2/lms-front-error.log",
-      "out_file": "/var/log/pm2/lms-front-out.log",
-      "merge_logs": true,
-      "time": true
+      }
     }
   ]
 }
