--- a/pm2.config.json
+++ b/pm2.config.json
@@ -2,15 +2,18 @@
   "apps": [
     {
       "name": "lms-front",
-      "script": "npm",
+      "script": "./node_modules/.bin/next",
       "args": "start",
-      "cwd": "/var/www/CO2eportal-lms-frontend",
-      "instances": 2,
-      "exec_mode": "cluster",
+      "cwd": "/var/www/C02eportal-lms-frontend",
+      "instances": 1,
+      "exec_mode": "fork",
       "env": {
         "NODE_ENV": "production",
         "PORT": 3000
-      }
+      },
+      "error_file": "/var/log/pm2/lms-front-error.log",
+      "out_file": "/var/log/pm2/lms-front-out.log",
+      "log_file": "/var/log/pm2/lms-front-combined.log"
     }
   ]
 }
