--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.5",
     "tailwind-merge": "^3.3.1"
   },
