--- a/pm2.config.json
+++ b/pm2.config.json
@@ -2,18 +2,9 @@
   "apps": [
     {
       "name": "lms-front",
-      "script": "./node_modules/.bin/next",
-      "args": "start",
-      "cwd": "/var/www/C02eportal-lms-frontend",
-      "instances": 1,
-      "exec_mode": "fork",
-      "env": {
-        "NODE_ENV": "production",
-        "PORT": 3000
-      },
-      "error_file": "/var/log/pm2/lms-front-error.log",
-      "out_file": "/var/log/pm2/lms-front-out.log",
-      "log_file": "/var/log/pm2/lms-front-combined.log"
+      "script": "npm",
+      "args": "run start",
+      "cwd": "/var/www/C02eportal-lms-frontend", 
     }
   ]
 }
