--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 # Your backend (NestJS, etc.)
-NEXT_PUBLIC_API_BASE_URL=http://localhost:4001
+NEXT_PUBLIC_API_BASE_URL=https://api.lms.co2eportal.com
 
 # Cookie config
 AUTH_COOKIE_NAME=lms_session
