--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --port=4000",
-    "build": "next build",
+    "build": "next build --env=development",
     "start": "next start --port=4000",
     "lint": "eslint"
   },
